--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,22 @@
+/*!
+
+
+
+
+
+
+ __  __                                                  ____                             
+|  \/  |   __ _  __  __   ___   _ __     ___    ___     / ___|   __ _   _ __ ___     __ _ 
+| |\/| |  / _` | \ \/ /  / _ \ | '_ \   / __|  / _ \   | |  _   / _` | | '_ ` _ \   / _` |
+| |  | | | (_| |  >  <  |  __/ | | | | | (__  |  __/   | |_| | | (_| | | | | | | | | (_| |
+|_|  |_|  \__,_| /_/\_\  \___| |_| |_|  \___|  \___|    \____|  \__,_| |_| |_| |_|  \__,_|
+    
+
+
+
+
+
+*/
 
 @font-face { font-family: "Quicksand-Regular"; src: url('/fontes_web/Quicksand-Regular.ttf') format("truetype"); }
 
